--- a/asyncapi/google.drive/Dependencies.toml
+++ b/asyncapi/google.drive/Dependencies.toml
@@ -9,7 +9,7 @@ dependencies-toml-version = "2"
 [[package]]
 org = "ballerina"
 name = "auth"
-version = "2.3.1"
+version = "2.4.0"
 dependencies = [
 	{org = "ballerina", name = "crypto"},
 	{org = "ballerina", name = "jballerina.java"},
@@ -31,6 +31,14 @@ dependencies = [
 
 [[package]]
 org = "ballerina"
+name = "constraint"
+version = "1.0.0"
+dependencies = [
+	{org = "ballerina", name = "jballerina.java"}
+]
+
+[[package]]
+org = "ballerina"
 name = "crypto"
 version = "2.2.2"
 dependencies = [
@@ -41,7 +49,7 @@ dependencies = [
 [[package]]
 org = "ballerina"
 name = "file"
-version = "1.3.0"
+version = "1.4.0"
 dependencies = [
 	{org = "ballerina", name = "io"},
 	{org = "ballerina", name = "jballerina.java"},
@@ -54,10 +62,11 @@ dependencies = [
 [[package]]
 org = "ballerina"
 name = "http"
-version = "2.3.0"
+version = "2.4.0"
 dependencies = [
 	{org = "ballerina", name = "auth"},
 	{org = "ballerina", name = "cache"},
+	{org = "ballerina", name = "constraint"},
 	{org = "ballerina", name = "crypto"},
 	{org = "ballerina", name = "file"},
 	{org = "ballerina", name = "io"},
@@ -84,7 +93,7 @@ modules = [
 [[package]]
 org = "ballerina"
 name = "io"
-version = "1.2.2"
+version = "1.3.0"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"},
 	{org = "ballerina", name = "lang.value"}
@@ -98,7 +107,7 @@ version = "0.0.0"
 [[package]]
 org = "ballerina"
 name = "jwt"
-version = "2.3.1"
+version = "2.4.0"
 dependencies = [
 	{org = "ballerina", name = "cache"},
 	{org = "ballerina", name = "crypto"},
@@ -179,7 +188,7 @@ dependencies = [
 [[package]]
 org = "ballerina"
 name = "log"
-version = "2.3.0"
+version = "2.4.1"
 dependencies = [
 	{org = "ballerina", name = "io"},
 	{org = "ballerina", name = "jballerina.java"},
@@ -193,7 +202,7 @@ modules = [
 [[package]]
 org = "ballerina"
 name = "mime"
-version = "2.3.0"
+version = "2.4.0"
 dependencies = [
 	{org = "ballerina", name = "io"},
 	{org = "ballerina", name = "jballerina.java"},
@@ -203,7 +212,7 @@ dependencies = [
 [[package]]
 org = "ballerina"
 name = "oauth2"
-version = "2.3.1"
+version = "2.4.0"
 dependencies = [
 	{org = "ballerina", name = "cache"},
 	{org = "ballerina", name = "crypto"},
@@ -223,8 +232,9 @@ dependencies = [
 [[package]]
 org = "ballerina"
 name = "os"
-version = "1.3.0"
+version = "1.4.0"
 dependencies = [
+	{org = "ballerina", name = "io"},
 	{org = "ballerina", name = "jballerina.java"}
 ]
 
@@ -312,8 +322,20 @@ modules = [
 
 [[package]]
 org = "ballerinax"
+name = "client.config"
+version = "1.0.1"
+dependencies = [
+	{org = "ballerina", name = "http"},
+	{org = "ballerina", name = "oauth2"}
+]
+modules = [
+	{org = "ballerinax", packageName = "client.config", moduleName = "client.config"}
+]
+
+[[package]]
+org = "ballerinax"
 name = "googleapis.drive"
-version = "3.0.0"
+version = "3.1.0"
 dependencies = [
 	{org = "ballerina", name = "file"},
 	{org = "ballerina", name = "http"},
@@ -321,7 +343,8 @@ dependencies = [
 	{org = "ballerina", name = "log"},
 	{org = "ballerina", name = "os"},
 	{org = "ballerina", name = "url"},
-	{org = "ballerinai", name = "observe"}
+	{org = "ballerinai", name = "observe"},
+	{org = "ballerinax", name = "client.config"}
 ]
 modules = [
 	{org = "ballerinax", packageName = "googleapis.drive", moduleName = "googleapis.drive"}
@@ -330,7 +353,7 @@ modules = [
 [[package]]
 org = "ballerinax"
 name = "trigger.google.drive"
-version = "0.6.11"
+version = "0.7.1"
 dependencies = [
 	{org = "ballerina", name = "http"},
 	{org = "ballerina", name = "lang.runtime"},
@@ -341,6 +364,7 @@ dependencies = [
 	{org = "ballerina", name = "uuid"},
 	{org = "ballerinai", name = "observe"},
 	{org = "ballerinax", name = "asyncapi.native.handler"},
+	{org = "ballerinax", name = "client.config"},
 	{org = "ballerinax", name = "googleapis.drive"}
 ]
 modules = [
