--- a/asyncapi/slack/Dependencies.toml
+++ b/asyncapi/slack/Dependencies.toml
@@ -9,7 +9,7 @@ dependencies-toml-version = "2"
 [[package]]
 org = "ballerina"
 name = "auth"
-version = "2.3.1"
+version = "2.4.0"
 dependencies = [
 	{org = "ballerina", name = "crypto"},
 	{org = "ballerina", name = "jballerina.java"},
@@ -32,9 +32,17 @@ dependencies = [
 [[package]]
 org = "ballerina"
 name = "cloud"
-version = "2.2.0"
+version = "2.3.0"
 modules = [
 	{org = "ballerina", packageName = "cloud", moduleName = "cloud"}
+]
+
+[[package]]
+org = "ballerina"
+name = "constraint"
+version = "1.0.0"
+dependencies = [
+	{org = "ballerina", name = "jballerina.java"}
 ]
 
 [[package]]
@@ -49,7 +57,7 @@ dependencies = [
 [[package]]
 org = "ballerina"
 name = "file"
-version = "1.3.0"
+version = "1.4.0"
 dependencies = [
 	{org = "ballerina", name = "io"},
 	{org = "ballerina", name = "jballerina.java"},
@@ -62,10 +70,11 @@ dependencies = [
 [[package]]
 org = "ballerina"
 name = "http"
-version = "2.3.0"
+version = "2.4.0"
 dependencies = [
 	{org = "ballerina", name = "auth"},
 	{org = "ballerina", name = "cache"},
+	{org = "ballerina", name = "constraint"},
 	{org = "ballerina", name = "crypto"},
 	{org = "ballerina", name = "file"},
 	{org = "ballerina", name = "io"},
@@ -92,7 +101,7 @@ modules = [
 [[package]]
 org = "ballerina"
 name = "io"
-version = "1.2.2"
+version = "1.3.0"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"},
 	{org = "ballerina", name = "lang.value"}
@@ -106,7 +115,7 @@ version = "0.0.0"
 [[package]]
 org = "ballerina"
 name = "jwt"
-version = "2.3.1"
+version = "2.4.0"
 dependencies = [
 	{org = "ballerina", name = "cache"},
 	{org = "ballerina", name = "crypto"},
@@ -187,7 +196,7 @@ dependencies = [
 [[package]]
 org = "ballerina"
 name = "log"
-version = "2.3.0"
+version = "2.4.1"
 dependencies = [
 	{org = "ballerina", name = "io"},
 	{org = "ballerina", name = "jballerina.java"},
@@ -201,7 +210,7 @@ modules = [
 [[package]]
 org = "ballerina"
 name = "mime"
-version = "2.3.0"
+version = "2.4.0"
 dependencies = [
 	{org = "ballerina", name = "io"},
 	{org = "ballerina", name = "jballerina.java"},
@@ -211,7 +220,7 @@ dependencies = [
 [[package]]
 org = "ballerina"
 name = "oauth2"
-version = "2.3.1"
+version = "2.4.0"
 dependencies = [
 	{org = "ballerina", name = "cache"},
 	{org = "ballerina", name = "crypto"},
@@ -231,8 +240,9 @@ dependencies = [
 [[package]]
 org = "ballerina"
 name = "os"
-version = "1.3.0"
+version = "1.4.0"
 dependencies = [
+	{org = "ballerina", name = "io"},
 	{org = "ballerina", name = "jballerina.java"}
 ]
 
@@ -309,7 +319,7 @@ modules = [
 [[package]]
 org = "ballerinax"
 name = "trigger.slack"
-version = "0.6.7"
+version = "0.7.0"
 dependencies = [
 	{org = "ballerina", name = "cloud"},
 	{org = "ballerina", name = "http"},
