--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,8 @@ on: [push, pull_request]
 jobs:
   container:
     runs-on: ubuntu-latest
+    env:
+      BALLERINA_DEV_CENTRAL: true
     container:
       image: ballerina/ballerina:2201.2.1
       options: --user root
@@ -12,7 +14,7 @@ jobs:
       - uses: actions/checkout@v1
       - name: Build with Gradle
         env:
-          BALLERINA_CENTRAL_ACCESS_TOKEN: ${{ secrets.BALLERINA_CENTRAL_ACCESS_TOKEN }}
+          # BALLERINA_CENTRAL_ACCESS_TOKEN: ${{ secrets.BALLERINA_CENTRAL_ACCESS_TOKEN }}
           JAVA_OPTS: -DBALLERINA_DEV_COMPILE_BALLERINA_ORG=true
           GRADLE_USER_HOME: ~/.gradle
           packageUser: ${{ github.actor }}
