--- a/native/asb/build.gradle
+++ b/native/asb/build.gradle
@@ -25,10 +25,11 @@ repositories {
 }
 
 dependencies {
-    implementation group: 'com.microsoft.azure', name: 'azure-servicebus', version: project.asb_sdk_version
-    dist group: 'com.microsoft.azure', name: 'azure-servicebus', version: project.asb_sdk_version
-    implementation group: 'org.slf4j', name: 'slf4j-api', version: project.slf4jVersion
+    implementation group: 'com.azure', name: 'azure-messaging-servicebus', version: project.asb_sdk_version
+    dist group: 'com.azure', name: 'azure-messaging-servicebus', version: project.asb_sdk_version
     compile group: 'org.ballerinalang', name: 'ballerina-lang', version: project.ballerinaLangVersion
+    implementation group: 'log4j', name: 'log4j', version: project.log4jVersion
+    dist group: 'log4j', name: 'log4j', version: project.log4jVersion
     compile(group: 'org.ballerinalang', name: 'ballerina-runtime', version: project.ballerinaLangVersion) {
         transitive = false
     }
@@ -39,7 +40,7 @@ jar {
     dependsOn configurations.dist
     from { configurations.dist.collect { it.isDirectory() ? it : zipTree(it) } } {
         exclude 'META-INF/*.RSA', 'META-INF/*.SF', 'META-INF/*.DSA', 'io/netty/**', 'com/google/gson/**', 
-        'org/slf4j/**', 'org/apache/commons/lang3/**' 
+        'org/slf4j/**', 'org/apache/commons/lang3/**', 'com/ctc/wstx/**', 'org/codehaus/**'
     }
 }
 
