--- a/native/asb/build.gradle
+++ b/native/asb/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id "com.github.johnrengelman.shadow" version "8.1.1"
+    id "com.github.johnrengelman.shadow" version "${githubJohnrengelmanShadowVersion}"
 }
 
 group project.asb_trigger_group
