--- a/native/sfdc/build.gradle
+++ b/native/sfdc/build.gradle
@@ -17,7 +17,7 @@
 
 plugins {
     id 'java'
-    id "com.github.johnrengelman.shadow" version "8.1.1"
+    id "com.github.johnrengelman.shadow" version "${githubJohnrengelmanShadowVersion}"
 }
 
 configurations {
