--- a/asyncapi/asgardeo/Ballerina.toml
+++ b/asyncapi/asgardeo/Ballerina.toml
@@ -15,5 +15,5 @@ observabilityIncluded = true
 [[platform.java11.dependency]]
 groupId = "io.crypto"
 artifactId = "decryption-native"
-version = "1.0-SNAPSHOT"
+version = "0.0.6"
 path = "../../native/asgardeo/build/libs/asgardeo-0.0.6.jar"
