--- a/asyncapi/asgardeo/asyncapi.yml
+++ b/asyncapi/asgardeo/asyncapi.yml
@@ -163,6 +163,38 @@ components:
           $ref: '#/components/schemas/GenericSecurityData'
         eventData:
           $ref: '#/components/schemas/GenericUserData'
+    UpdateUserCredentialsEvent:
+      type: object
+      properties:
+        securityData:
+          $ref: '#/components/schemas/GenericSecurityData'
+        eventData:
+          $ref: '#/components/schemas/UpdateUserCredentialsData'
+    UpdateUserCredentialsData:
+      type: object
+      properties:
+        ref:
+          type: string
+          example: >-
+            https://api.asg.io/t/myorg/scim2/Users/36a4541a-1055-4986-872c-cdf2faa7a468
+        organizationId:
+          type: int
+          example: '1234'
+        organizationName:
+          type: string
+          example: myorg
+        userId:
+          type: string
+          example: e3dca90f-e1e3-4f4b-83e4-5743ecce570f
+        userName:
+          type: string
+          example: john@gmail.com
+        scenario:
+          type: string
+          example: myorg  
+        userStoreName:
+          type: string
+          example: DEFAULT           
     UserGroupUpdateEvent:
       type: object
       properties:
