--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ githubJohnrengelmanShadowVersion=5.2.0
 underCouchDownloadVersion=4.0.4
 researchgateReleaseVersion=2.8.0
 checkstyleToolVersion=7.8.2
-ballerinaLangVersion=2201.11.0-20250127-101700-a4b67fe5
+ballerinaLangVersion=2201.11.0
 
 // SFDC trigger
 sfdc_trigger_group=io.ballerina.sfdc
