--- a/.github/workflows/daily_build.yml
+++ b/.github/workflows/daily_build.yml
@@ -8,11 +8,21 @@ on:
 jobs:
   dailyBuild:
     runs-on: ubuntu-latest
-    container:
-      image: ballerina/ballerina:nightly
-      options: --user root
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+      
+      - name: Set Up Ballerina
+        uses: ballerina-platform/setup-ballerina@v1.1.3
+        with:
+          version: 2201.11.0  
+      
+      - name: Set up JDK 21
+        uses: actions/setup-java@v3
+        with:
+          distribution: "temurin"
+          java-version: 21.0.3
+
       - name: Build with Gradle
         env:
           BALLERINA_CENTRAL_ACCESS_TOKEN: ${{ secrets.BALLERINA_CENTRAL_ACCESS_TOKEN }}
