--- a/asyncapi/aayu.mftg.as2/Ballerina.toml
+++ b/asyncapi/aayu.mftg.as2/Ballerina.toml
@@ -5,7 +5,7 @@ org = "ballerinax"
 name = "trigger.aayu.mftg.as2"
 repository = "https://github.com/ballerina-platform/asyncapi-triggers"
 version = "0.9.0"
-distribution = "2201.11.0-20250127-101700-a4b67fe5"
+distribution = "2201.11.0"
 icon = "docs/icon.png"
 authors = ["Ballerina"]
 
