--- a/asyncapi/asb/Ballerina.toml
+++ b/asyncapi/asb/Ballerina.toml
@@ -7,7 +7,7 @@ authors = ["Ballerina"]
 keywords = ["IT Operations/Message Brokers", "Cost/Paid", "Vendor/Microsoft"]
 icon = "docs/icon.png"
 repository = "https://github.com/ballerina-platform/asyncapi-triggers"
-distribution = "2201.11.0-20250127-101700-a4b67fe5"
+distribution = "2201.11.0"
 
 [build-options]
 observabilityIncluded = true
