--- a/asyncapi/shopify/Ballerina.toml
+++ b/asyncapi/shopify/Ballerina.toml
@@ -5,7 +5,7 @@ org = "ballerinax"
 name = "trigger.shopify"
 repository = "https://github.com/ballerina-platform/asyncapi-triggers"
 version = "1.3.1"
-distribution = "2201.11.0-20250127-101700-a4b67fe5"
+distribution = "2201.11.0"
 icon = "docs/icon.png"
 authors = ["Ballerina"]
 
