--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,9 +23,10 @@ jobs:
       - name: Build with Gradle
         env:
           BALLERINA_CENTRAL_ACCESS_TOKEN: ${{ secrets.BALLERINA_CENTRAL_DEV_ACCESS_TOKEN }}
-          JAVA_OPTS: -DBALLERINA_DEV_COMPILE_BALLERINA_ORG=true
-          GRADLE_USER_HOME: ~/.gradle
+          # JAVA_OPTS: -DBALLERINA_DEV_COMPILE_BALLERINA_ORG=true
+          # GRADLE_USER_HOME: ~/.gradle
           packageUser: ${{ github.actor }}
           packagePAT: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          echo "Running an updated CI"
           ./gradlew build -Prelease=false
